# discord-maid

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
bot/: app.py  config.py  discord_bot.py  grok_client.py  log_store.py  memory.py  names.py  types.py
tests/: test_chunk_text.py  test_clear_command.py  test_fresh_command.py  test_image_collect.py  test_log_store.py  test_memory.py  test_preferred_name.py  test_web_command.py
